Add center tag to index.html for improved layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
     <!DOCTYPE html>
     <html lang="en">
+    <center>    
     <head>
         <meta charset="UTF-8">
         <title>Html Games</title>
@@ -8,4 +9,5 @@
         <h1>Welcome to BearVsPython's Html games</h1>
         <p>This is the homepage.</p>
     </body>
+    </center>
     </html>
