--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <center>    
-    <head>
-        <meta charset="UTF-8">
-        <title>Html Games</title>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Html Games</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        /* Full-page black background and readable white text */
+        :root { color-scheme: dark; }
+        html, body { height: 100%; margin: 0; background-color: #000; color: #fff; }
+        body { display: flex; align-items: center; justify-content: center; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
+        .container { padding: 2rem; text-align: center; max-width: 900px; }
+        a, p, h1, h2, h3, li { color: #fff; }
+    </style>
+</head>
+<body>
+    <div class="container">
         <h1>Welcome to BearVsPython's Html games</h1>
         <p>This is the homepage.</p>
-    </body>
-    </center>
-    </html>
+    </div>
+</body>
+</html>
