--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Html Games</title>
+    <title>BearVsPython website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         /* Full-page black background and readable white text */
@@ -10,13 +10,64 @@
         html, body { height: 100%; margin: 0; background-color: #000; color: #fff; }
         body { display: flex; align-items: center; justify-content: center; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
         .container { padding: 2rem; text-align: center; max-width: 900px; }
+        .games-grid { display: flex; flex-wrap: wrap; gap: 12px; justify-content: center; margin-top: 1rem; }
+        .game-btn { background: #111; color: #fff; border: 1px solid #444; padding: 10px 16px; border-radius: 8px; cursor: pointer; font-size: 1rem; }
+        .game-btn:hover { background: #222; }
         a, p, h1, h2, h3, li { color: #fff; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to BearVsPython's Html games</h1>
+        <h1>Welcome to BearVsPython's website</h1>
         <p>This is the homepage.</p>
+        <div id="games-container">
+            <h2>Games</h2>
+            <div id="games" class="games-grid">
+                <p id="games-loading">Loading games…</p>
+            </div>
+        </div>
     </div>
+
+    <script>
+    (async function(){
+        const listEl = document.getElementById('games');
+        const loadingEl = document.getElementById('games-loading');
+        try {
+            // Try a static manifest first (for GitHub Pages).
+            let games = null;
+            try {
+                const res = await fetch('games.json');
+                if (res.ok) games = await res.json();
+            } catch (e) {
+                // ignore and try API fallback
+            }
+            // Fallback to local server API if manifest not present
+            if (!games) {
+                const res2 = await fetch('/api/games');
+                if (res2.ok) games = await res2.json();
+            }
+
+            if (loadingEl) loadingEl.remove();
+            if (!games || games.length === 0) {
+                listEl.textContent = 'No games found in the /games folder.';
+                return;
+            }
+            games.forEach(g => {
+                const btn = document.createElement('button');
+                btn.className = 'game-btn';
+                btn.textContent = g.name || g.id;
+                btn.addEventListener('click', () => {
+                    // Use relative navigation so GitHub Pages serves correctly
+                    window.location.href = 'games/' + encodeURIComponent(g.id) + '/';
+                });
+                listEl.appendChild(btn);
+            });
+        } catch (err) {
+            if (loadingEl) loadingEl.remove();
+            listEl.textContent = 'Error loading games: ' + err.message;
+            console.error(err);
+        }
+    })();
+    </script>
 </body>
 </html>
