Update homepage heading for clarity and remove unnecessary paragraph

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to BearVsPython's website</h1>
-        <p>This is the homepage.</p>
+        <h1>Welcome to BearVsPython browser games</h1>
         <div id="games-container">
             <h2>Games</h2>
             <div id="games" class="games-grid">
