Add Snake game button and implement snake game functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h2>Games</h2>
             <div id="games" class="games-grid">
                 <button class="game-btn" onclick="location.href='games/minecraft/minecraft.html'">Minecraft</button>
+                <button class="game-btn" onclick="location.href='games/snake/snake.html'">Snake</button>
             </div>
         </div>
     </div>
