--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         html, body { height: 100%; margin: 0; background-color: #000; color: #fff; }
         body { display: flex; align-items: center; justify-content: center; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
         .container { padding: 2rem; text-align: center; max-width: 900px; }
-        .games-grid { display: flex; flex-wrap: wrap; gap: 12px; justify-content: center; margin-top: 1rem; }
-        .game-btn { background: #111; color: #fff; border: 1px solid #444; padding: 10px 16px; border-radius: 8px; cursor: pointer; font-size: 1rem; }
+    .games-list { display: flex; flex-direction: column; gap: 12px; align-items: center; margin-top: 1rem; }
+    .game-btn { background: #111; color: #fff; border: 1px solid #444; padding: 12px 16px; border-radius: 8px; cursor: pointer; font-size: 1rem; width: 100%; max-width: 480px; }
         .game-btn:hover { background: #222; }
         a, p, h1, h2, h3, li { color: #fff; }
     </style>
@@ -20,8 +20,7 @@
     <div class="container">
         <h1>Welcome to BearVsPython browser games</h1>
         <div id="games-container">
-            <h2>Games</h2>
-            <div id="games" class="games-grid">
+            <div id="games" class="games-list">
                 <button class="game-btn" onclick="location.href='games/minecraft/minecraft.html'">Minecraft</button>
                 <button class="game-btn" onclick="location.href='games/snake/snake.html'">Snake</button>
             </div>
