--- a/games/snake/snake.html
+++ b/games/snake/snake.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Snake Game - Dark Mode</title>
+    <title>Snake</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
