Add Snake game and update game links in the main index
- Created a new Snake game in HTML with JavaScript functionality.
- Updated the main index.html to include links to different versions of Minecraft and added a link to the new Snake game.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <h1>Welcome to BearVsPython browser games</h1>
         <div id="games-container">
             <div id="games" class="games-list">
-                <button class="game-btn" onclick="location.href='games/minecraft/minecraft.html'">Minecraft</button>
-                <button class="game-btn" onclick="location.href='games/snake/snake.html'">Snake</button>
+                <button class="game-btn" onclick="location.href='games/minecraft/1.12.2/index.html'">Minecraft 1.12.2</button>
+                <button class="game-btn" onclick="location.href='games/minecraft/1.8.8/index.html'">Minecraft 1.8.8</button>
+                <button class="game-btn" onclick="location.href='games/snake/index.html'">Snake</button>
+                <button class="game-btn" onclick="location.href='games/sandbroxels/index.html'">SandBox</button>
             </div>
         </div>
     </div>
