Update Minecraft game links to include version specifications and added js versions of minecraft for chromebooks

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <h1>Welcome to BearVsPython browser games</h1>
         <div id="games-container">
             <div id="games" class="games-list">
-                <button class="game-btn" onclick="location.href='games/minecraft/1.12.2/index.html'">Minecraft 1.12.2</button>
-                <button class="game-btn" onclick="location.href='games/minecraft/1.8.8/index.html'">Minecraft 1.8.8</button>
+                <button class="game-btn" onclick="location.href='games/minecraft/1.12.2 wasm/index.html'">Minecraft 1.12.2 wasm</button>
+                <button class="game-btn" onclick="location.href='games/minecraft/1.8.8 wasm/index.html'">Minecraft 1.8.8 wasm</button>
+                <button class="game-btn" onclick="location.href='games/minecraft/1.12.2 js/index.html'">Minecraft 1.12.2 js</button>
+                <button class="game-btn" onclick="location.href='games/minecraft/1.8.8 js/index.html'">Minecraft 1.8.8 js</button>
                 <button class="game-btn" onclick="location.href='games/snake/index.html'">Snake</button>
                 <button class="game-btn" onclick="location.href='games/sandbroxels/index.html'">SandBox</button>
             </div>
