--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="game-btn" onclick="location.href='games/minecraft/1.8.8 wasm/index.html'" target="_blank">Minecraft 1.8.8 wasm</button>
                 <button class="game-btn" onclick="location.href='games/minecraft/1.12.2 wasm/index.html'" target="_blank">Minecraft 1.12.2 wasm</button>
                 <button class="game-btn" onclick="location.href='games/snake/index.html'" target="_blank">Snake</button>
-                <button class="game-btn" onclick="window.open('games/sandbroxels/index.html','_blank')>SandBox</button>
+                <button class="game-btn" onclick="window.open('games/sandbroxels/index.html','_blank')">SandBox</button>
             </div>
         </div>
     </div>
