fixed html in index

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
         body { display: flex; align-items: center; justify-content: center; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
         .container { padding: 2rem; text-align: center; max-width: 900px; }
         .topleft { position: absolute; top: 8px; left: 16px; font-size: 20px; }
+    .source-btn { background: #111; color: #fff; border: 1px solid #444; padding: 12px 16px; border-radius: 8px; cursor: pointer; font-size: 1rem; width: 100%; max-width: 480px; }
     .games-list { display: flex; flex-direction: column; gap: 12px; align-items: center; margin-top: 1rem; }
     .game-btn { background: #111; color: #fff; border: 1px solid #444; padding: 12px 16px; border-radius: 8px; cursor: pointer; font-size: 1rem; width: 100%; max-width: 480px; }
         .game-btn:hover { background: #222; }
         a, p, h1, h2, h3, li { color: #fff; }
     </style>
 </head>
-<body>
     <div id="topleft">
         <button class="source-btn" onclick="window.open('https://github.com/BearVsPython/htmlGames', '_blank')">Source Code</button>
     </div>
+<body>
     <div class="container">
         <h1>Welcome to BearVsPython browser games</h1>
         <div id="games-container">
