--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         :root { color-scheme: dark; }
         html, body { height: 100%; margin: 0; background-color: #000; color: #fff; }
         body { display: flex; align-items: center; justify-content: center; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
+        .topright { position: absolute; top: 10px; right: 10px; font-size: 20px;}
         .container { padding: 2rem; text-align: center; max-width: 900px; }
-        .topleft { position: absolute; top: 8px; left: 16px; font-size: 20px; }
     .source-btn { background: #111; color: #fff; border: 1px solid #444; padding: 12px 16px; border-radius: 8px; cursor: pointer; font-size: 1rem; width: 100%; max-width: 480px; }
     .games-list { display: flex; flex-direction: column; gap: 12px; align-items: center; margin-top: 1rem; }
     .game-btn { background: #111; color: #fff; border: 1px solid #444; padding: 12px 16px; border-radius: 8px; cursor: pointer; font-size: 1rem; width: 100%; max-width: 480px; }
@@ -21,14 +21,12 @@
         a, p, h1, h2, h3, li { color: #fff; }
     </style>
 </head>
-    <!--
-    <div id="topleft">
+    <div class="topright">
         <button class="source-btn" onclick="window.open('https://github.com/BearVsPython/htmlGames', '_blank')">Source Code</button>
     </div>
-    -->
 <body>
     <div class="container">
-        <h1>Welcome to BearVsPython browser games</h1>
+        <h1>Welcome to BearVsPython</h1>
         <div id="games-container">
             <div id="games" class="games-list">
                 <button class="game-btn" onclick="window.open('games/minecraft/1.8.8 js/index.html', '_blank')">Minecraft 1.8.8 js</button>
