Update index.html fixed main page title

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 <body>
     <div class="container">
-        <h1>Welcome to BearVsPython</h1>
+        <h1>Welcome to BearVsPython's browser games</h1>
         <div id="games-container">
             <div id="games" class="games-list">
                 <button class="game-btn" onclick="window.open('games/minecraft/1.8.8 js/index.html', '_blank')">Minecraft 1.8.8 js</button>
