--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <button class="game-btn" onclick="window.open('games/minecraft/1.12.2 wasm/index.html', '_blank')">Minecraft 1.12.2 wasm</button>
                 <button class="game-btn" onclick="window.open('games/snake/index.html', '_blank')">Snake</button>
                 <button class="game-btn" onclick="window.open('games/sandbroxels/index.html', '_blank')">SandBox</button>
+                <button class="game-btn" onclick="window.open('games/slope/index.html', '_blank')">Slope</button>
             </div>
         </div>
     </div>
