--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>BearVsPython website</title>
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="/favicon.svg">
-    <link rel="mask-icon" href="/favicon.svg" color="#1f7ae0">
+    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="mask-icon" href="/favicon.png" color="#1f7ae0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         /* Full-page black background and readable white text */
